--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,52 @@
-# Ignore virtual environments
-jokic/
-.venv/
-env/
-venv/
-
-# Ignore Python cache
+# --- Python bytecode/cache ---
 __pycache__/
 *.py[cod]
+*.so
+*.pyd
 
-# Ignore Jupyter notebook checkpoints
+# --- Virtual environments ---
+jokic/
+.venv/
+venv/
+env/
+
+# --- Jupyter notebooks ---
 .ipynb_checkpoints/
+nbproject/
 
-# Ignore environment/config files
+# --- Environment & secrets ---
 .env
 *.env
 
-# Ignore system files
-.DS_Store
+# --- Logs & temp files ---
+*.log
+*.tmp
 
-# Ignore model outputs (optional)
+# --- OS & system files ---
+.DS_Store
+.AppleDouble
+Thumbs.db
+
+# --- VSCode project settings ---
+.vscode/
+
+# --- Model files ---
 *.pkl
 *.joblib
 
-# Ignore data files if removed for public repo (optional)
-# Uncomment below if you plan to exclude raw data files
-# *.csv
-# data/
+# --- Data files ---
+*.csv
+data/
 
-# Ignore logs and temporary files
-*.log
-*.tmp
+# --- Compiled notebooks or HTML reports ---
+*.html
+*.pdf
+
+# --- Misc build artifacts ---
+*.egg-info/
+dist/
+build/
+
+# --- Lock/backup files ---
+*.lock
+*.bak
