--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,42 @@
-# Core packages
+# ===========================
+# Core Data Science Packages
+# ===========================
 pandas==2.2.3
 numpy==2.2.4
 scikit-learn==1.6.1
 matplotlib==3.10.1
 seaborn==0.13.2
 
-# Modeling and utilities
+# ===========================
+# Modeling and Utilities
+# ===========================
 joblib==1.4.2
-xgboost==2.0.3      # You use XGBoost extensively
-shap==0.45.1        # For SHAP analysis
+xgboost==2.0.3
+shap==0.45.1
+torch==2.4.1
+torchvision==0.19.1
+statsmodels==0.14.4
+scipy==1.14.1
 
-# Data access
+# ===========================
+# Data Access / APIs
+# ===========================
 requests==2.32.3
-nba-api==1.4.1      # Required for all data scraping scripts
+nba-api==1.4.1
 
-# Notebooks
+# ===========================
+# Notebooks / Environment
+# ===========================
 jupyterlab==4.3.6
+
+# ===========================
+# Deep learning 
+# ===========================
+torch==2.4.1
+torchvision==0.19.1
+
+# ===========================
+# Statistical analysis
+# ===========================
+statsmodels==0.14.4
+scipy==1.14.1
