--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,34 @@
-# ===========================
-# Core Data Science Packages
-# ===========================
+# ====================================
+# Core Data Processing & Engineering
+# ====================================
 pandas==2.2.3
-numpy==2.2.4
-scikit-learn==1.6.1
-matplotlib==3.10.1
+numpy==2.1.2
+nba-api==1.4.1
+psycopg2==2.9.9
+
+# ====================================
+# Machine Learning & Modeling
+# ====================================
+scikit-learn==1.6.0
+xgboost==2.1.1
+shap==0.46.0
+scipy==1.14.1
+joblib==1.4.2
+
+# ====================================
+# Visualization & Reporting
+# ====================================
+matplotlib==3.9.2
 seaborn==0.13.2
 
-# ===========================
-# Modeling and Utilities
-# ===========================
-joblib==1.4.2
-xgboost==2.0.3
-shap==0.45.1
+# ====================================
+# Optional (comment if unused)
+# ====================================
+sqlalchemy==2.0.34
+beautifulsoup4==4.12.3
 torch==2.4.1
 torchvision==0.19.1
-statsmodels==0.14.4
-scipy==1.14.1
-
-# ===========================
-# Data Access / APIs
-# ===========================
-requests==2.32.3
-nba-api==1.4.1
-
-# ===========================
-# Notebooks / Environment
-# ===========================
+optuna==3.6.1
+fastapi==0.115.0
+docker==7.1.0
 jupyterlab==4.3.6
-
-# ===========================
-# Deep learning 
-# ===========================
-torch==2.4.1
-torchvision==0.19.1
-
-# ===========================
-# Statistical analysis
-# ===========================
-statsmodels==0.14.4
-scipy==1.14.1
